# kestrel

./: .gitignore  LICENSE  README.md  kestrel.md
.github/workflows/: host-tests.yml
benchmarks/: benchmark_report.md  interpolator_results.csv  summarize.py
docs/: gate_module_guide.md  rp2350_interpolator_guide.md  troubleshooting.md
docs/hardware/: README.md
modules/motion_gate/: README.md  gate.c  gate.h
modules/motion_gate/test/: golden.py  test_gate.c
rp2350/: CMakeLists.txt
rp2350/arduino/kestrel_interp_bench/: hw_interpolator_resize.h  hw_interpolator_resize.inc  hw_interpolator_resize_impl.h  kestrel_interp_bench.ino
rp2350/arduino/kestrel_rp2350/: kestrel_rp2350.ino
rp2350/src/: hw_interpolator_resize.c  interp_resize_bench.c  kestrel_pins.h  main.c  output_controller.c  pir_trigger.c
rp2350/test/: test_resize.c
stm32h750/Core/Inc/: benchmark.h
stm32h750/Core/Src/: benchmark.c
stm32h750/Drivers/ov3660/: README.md  ov3660_regs.h  ov3660_stm32.c  ov3660_stm32.h  ov3660_tables.h
stm32h750/firmware/: README.md
stm32h750/firmware/08-DCMI2LCD/: .cproject  .project  08-DCMI2LCD.ioc  STM32H750VBTX_QSPI.ld
stm32h750/firmware/08-DCMI2LCD/Inc/: RTE_Components.h  ai_infer.h  app_x-cube-ai.h  detection.h  img_preproc.h  network.h  network_config.h  network_data.h  network_data_params.h  stm32h7xx_it.h  stop_mode.h  temp_sensor.h  tim.h  uart_log.h
stm32h750/firmware/08-DCMI2LCD/Src/: ai_infer.c  app_x-cube-ai.c  dcmi.c  detection.c  gate.c  gpio.c  img_preproc.c  main.c  network.c  network_data.c  network_data_params.c  (+8 more)
training/: README.md
(+3 files in other folders)
